src/css/App.scss
*,
:after,
:before {
  box-sizing: border-box;
}
body {
  margin: 0;
  padding: 0;
  font-family: Roboto, sans-serif;
  font-size: 14px;
  background-color: $bg-color;
  color: #541600;

  @include primary-font;
}
h2,
h3 {
  font-weight: 400;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @include secondary-font;
  margin: 0 0 $spacing 0;
}

a {
  color: #cc4700;
  text-decoration: none;
}
// a[:not(.resp-sharing-button__link)]:hover {
//   text-decoration: underline;
//   color: #e65000;
// }

.container {
  margin: 0 auto;
  /*padding: 0 2rem;*/
}
.container-section {
  padding: 0;
}

h1 {
  margin: 0;
  color: white;
  font-size: 2rem;
  text-shadow: 0 3px 3px rgba(143, 50, 0, 0.99);
}

@media (min-width: 600px) {
  body {
    font-size: 16px;
  }
  h1 {
    font-size: 2.5rem;
  }
}
@media (min-width: 850px) {
  h1 {
    font-size: 3rem;
  }
  #header .container {
    padding-left: 0;
  }
  .container {
    max-width: 800px;
  }
}
@media (min-width: 1050px) {
  h1 {
    font-size: 3rem;
  }
  .container {
    max-width: 1000px;
  }
}
@media (min-width: 1250px) {
  h1 {
    font-size: 3.5rem;
    /*font-weight: 400;*/
  }
  .container {
    max-width: 1200px;
  }
}

.small-container {
  max-width: 650px;
}

.share-buttons {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
}
.share-buttons > div {
  /*text-align: center;*/
  padding: 1rem 0;
}
@media (min-width: 480px) {
  .share-buttons {
    flex-direction: row;
  }
  .share-buttons > div {
    /*text-align: center;*/
    padding: 0;
  }
}

/* .card-conclusion p,
.card-conclusion li {
  font-size: 1.25rem;
} */

.img-responsive {
  max-width: 100%;
  height: auto;
}

#app {
  width: 100%;
}
.intro {
  font-size: 1.25rem;
}
.markdown-body :first-child {
  margin-top: 0;
}
.markdown-body :last-child {
  margin-bottom: 0;
}

.section {
  padding: 2rem 0;
}
.section:nth-child(2n + 1) {
  /*background-color: #FFBE59;*/
}
.star {
  transform: translateY(2px);
}
.conclusion-share-buttons {
  margin-top: 1.25rem;
}

// Disable the 3 column layout for now
// .main {
//   display: flex;
//   margin: 0 $spacing*3;
//   padding: $spacing 0;
// }
// .main-sidebar {
//   position: sticky;
//   margin-right: $spacing*3;
//   min-width: 250px;
//   max-width: 350px;
// }
// .main-contents {
//   flex: 1;
// }

